--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,9 @@
 html {
   position: relative;
   min-height: 100%;
+  font-family:sans-serif;
+  -ms-text-size-adjust:100%;
+  -webkit-text-size-adjust:100%
 }
 body {
   padding-top: 40px;
@@ -38,40 +41,4 @@ body {
   color:#666;
   padding-left:20px;
   padding:5px 0 20px 40px;
-}
-
-.mainbar{
-  background:#eee url("../images/main-back.png") repeat;
-  border-left: 1px solid #ccc;
-}
-
-.mainbar .container{
-  width: 100%;
-  padding: 0px !important
-}
-
-
-.mainbar .page-head{
-  background-color: #f8f8f8;
-  background: -webkit-gradient(linear, left top, left bottom, from(#f8f8f8), to(#f2f2f2));
-  background: -webkit-linear-gradient(top, #f8f8f8, #f2f2f2);
-  background: -moz-linear-gradient(top, #f8f8f8, #f2f2f2);
-  background: -ms-linear-gradient(top, #f8f8f8, #f2f2f2);
-  background: -o-linear-gradient(top, #f8f8f8, #f2f2f2);
-  background: linear-gradient(top, #f8f8f8, #f2f2f2);
-  padding: 8px 20px;
-  border-bottom: 1px solid #fff;
-  box-shadow: inset 0px 1px 1px #fff;
-}
-
-.mainbar .page-head h2{
-  font-weight: normal;
-  font-size: 20px;
-}
-
-/* Matter */
-
-.mainbar .matter{
-  border-top: 1px solid #ddd;
-  padding: 15px 0px;
 }
