--- a/public/css/main.css
+++ b/public/css/main.css
@@ -133,3 +133,8 @@ div.countTo label {font-weight: 300; font-size: 22px; line-height: 22px; }
 #loading {position: absolute; top: 40%; left: 45%; z-index: 2; }
 #loading span {background: url('../img/progress.gif') no-repeat top left; display: block; color:#666; padding-left:20px; padding:5px 0 20px 40px; }
 .x-form-helptext {color: #888; font-size: 9px; padding: 0 5px; }
+
+.main-block
+{
+    margin-top:30px;
+}
