--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,7 +6,7 @@ html {
   -webkit-text-size-adjust:100%
 }
 body {
-  padding-top: 40px;
+  padding-top: 0;
   padding-bottom: 60px;
   background-color: #eee;
 }
@@ -134,7 +134,14 @@ div.countTo label {font-weight: 300; font-size: 22px; line-height: 22px; }
 #loading span {background: url('../img/progress.gif') no-repeat top left; display: block; color:#666; padding-left:20px; padding:5px 0 20px 40px; }
 .x-form-helptext {color: #888; font-size: 9px; padding: 0 5px; }
 
-.main-block
+.navbar-block, .main-block, .footer-block
 {
-    margin-top:30px;
+    margin-top: 5px;
+    margin-bottom: 0;
+}
+
+.footer-block
+{
+    text-align: center;
+    vertical-align: middle;
 }
