--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -979,11 +979,11 @@ div.maximage-controls #slider_prev:hover {
 	line-height: 35px;
 }
 .alternate {
+	background-color:#f6f6f6;
 	display:inline-block;
-	width:100%;
 	margin-top:100px;
 	padding:100px 0;
-	background-color:#f6f6f6;
+	width:100%;
 }
 
 #middle .alternate:first-child {
@@ -994,30 +994,30 @@ div.maximage-controls #slider_prev:hover {
 }
 
 #middle .white {
-	display:block;
-	position:relative;
 	background-color:#fff;
+	display:block;
 	padding:15px;
+	position:relative;
 }
 #middle .page-header {
-	padding: 0;
 	margin: 0 0 15px 0;
+	padding: 0;
 }
 	#middle  .page-header h1 {
-		padding: 0;
-		margin: 0 0 10px 0;
 		font-size:36px;
 		line-height: 43px;
+		margin: 0 0 10px 0;
+		padding: 0;
 	}
 
 #middle .page-header.image {
 	position:relative;
 }
 	#middle .page-header.image .absolute {
-		position:absolute;
 		color:#fff;
-		top:20%;
 		margin-left:30px;
+		position:absolute;
+		top:20%;
 	}
 	#middle .page-header.image .absolute h1,
 	#middle .page-header.image .absolute p {
@@ -1025,8 +1025,8 @@ div.maximage-controls #slider_prev:hover {
 		font-weight:300;
 	}
 	#middle .page-header.image .absolute h1 {
-		text-shadow:#fff 0 0 20px;
 		font-size:50px;
+		text-shadow:#fff 0 0 20px;
 	}
 
 
@@ -1181,19 +1181,19 @@ div.maximage-controls #slider_prev:hover {
 	}
 
 	header .navbar {
-		padding:0;
 		height:70px;
+		padding:0;
 	}
 	header .navbar.bottom {
-		top:0;
 		bottom:auto;
+		top:0;
 	}
 	header .navbar-brand {
 		padding: 5px 15px;
 	}
 	header .nav.navbar-nav {
-		margin-top:0;
 		background-color:#fff;
+		margin-top:0;
 	}
 	header .nav.navbar-nav a {
 		border-bottom:#eee 1px solid;
@@ -1202,12 +1202,12 @@ div.maximage-controls #slider_prev:hover {
 		background-color:rgba(0,0,0,0.02);
 	}
 	header #mobileMenu {
-		display:block; 
-		width:50px; height:60px;
+		display:block;
 		float:right;
+		font-size:24px; height:60px;
 		margin-right:15px;
-		font-size:24px;
 		text-align:right;
+		width:50px;
 	}
 }
 
