--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -36,11 +36,11 @@ body {color:#333; font-family:'Open Sans', Arial, sans-serif; background:#B4B8BA
 
 @font-face {
 	font-family: 'madr';
-	src:url('../fonts/madr.eot?4khj3w');
-	src:url('../fonts/madr.eot?#iefix4khj3w') format('embedded-opentype'),
-		url('../fonts/madr.woff?4khj3w') format('woff'),
-		url('../fonts/madr.ttf?4khj3w') format('truetype'),
-		url('../fonts/madr.svg?4khj3w#madr') format('svg');
+	src:url('../fonts/madr.eot?s2ce5i');
+	src:url('../fonts/madr.eot?#iefixs2ce5i') format('embedded-opentype'),
+		url('../fonts/madr.woff?s2ce5i') format('woff'),
+		url('../fonts/madr.ttf?s2ce5i') format('truetype'),
+		url('../fonts/madr.svg?s2ce5i#madr') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -57,6 +57,10 @@ i {
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+}
+
+.icon-arrow-right:before {
+	content: "\e60a";
 }
 
 .icon-paso7:before {
@@ -98,6 +102,11 @@ i {
 .icon-paso4:before {
 	content: "\e609";
 }
+
+
+
+
+
 
 
 /**	01. Resets
@@ -1222,7 +1231,24 @@ body.modal-open {
 
 #data-table tbody > tr > td {white-space: nowrap;}
 
-.table-guide td:first-child, 
+.table-guide td:first-child {
+	position: relative;
+}
+.table-guide td:first-child:before {
+	content: "\e60a"; 
+	font-family: "madr";
+	font-style: normal;
+	font-weight: normal;
+	text-decoration: inherit;
+	position: absolute;
+	font-size: 34px;
+	color: #999;
+	top: 20%;
+	right: 5%;
+	/* margin: -300px 0 0 -200px; */
+	z-index: 1;
+}
+.table-guide td:first-child,
 .table-guide td:nth-child(2),
 .table-guide td:nth-child(4) {min-width: 75px; vertical-align: middle; text-align: center;}
 .table-guide td:nth-child(2) {padding: 0 10px;}
