--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1243,7 +1243,7 @@ body.modal-open {
 	position: absolute;
 	font-size: 34px;
 	color: #999;
-	top: 20%;
+	/* top: 20%; */
 	right: 5%;
 	/* margin: -300px 0 0 -200px; */
 	z-index: 1;
