--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -779,9 +779,6 @@ p.dropcap.color:first-letter {
 }
 
 
-
-
-
 /** 14. Navbar
  **************************************************************** **/
 
@@ -817,7 +814,7 @@ p.dropcap.color:first-letter {
 }
 .header .navbar-inverse .navbar-nav>li>a {
 	color:#231f20;
-	text-transform: uppercase;
+	/* text-transform: uppercase; */
 	font-size:14px;
 	font-weight: 400;
 	/*letter-spacing: .05em;*/
