--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -104,7 +104,23 @@ i {
 }
 
 
+.icon-conv1 {
+    background-image: url("../img/conv1.png");
+    background-position: center center;
+    background-repeat: no-repeat;
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+}
 
+.icon-conv2 {
+    background-image: url("../img/conv2.png");
+    background-position: center center;
+    background-repeat: no-repeat;
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+}
 
 
 
